Agregado el menú de navegación y sección de bienvenida con imágenes

--- a/index.html
+++ b/index.html
@@ -19,5 +19,28 @@
         <!-- Breve descripción -->
         <p>Gestión de Estudiantes y Docentes</p>
     </header>
+    <!-- Menú de Navegación -->
+    <nav>
+        <ul>
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#estudiantes">Estudiantes</a></li>
+            <li><a href="#docentes">Docentes</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+        </ul>
+    </nav>
+
+    <!-- Contenido Principal -->
+    <main>
+        <!-- Sección Inicio -->
+        <section id="inicio">
+            <h2>Bienvenido</h2>
+            <p>Plataforma para la gestión de estudiantes y docentes.</p>
+            <!-- Contenedor para imágenes con estilo Flexbox -->
+            <div style="display: flex; gap: 10px;">
+                <img src="imagenes/estudiantes.jpg" alt="Estudiantes de la Universidad de Nariño" width="300">
+                <img src="imagenes/docentes.png" alt="Docentes de la Universidad de Nariño" width="300">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
