Añadidas secciones de Estudiantes y Docentes, junto con formulario de gestión de docentes

--- a/index.html
+++ b/index.html
@@ -42,5 +42,36 @@
             </div>
         </section>
     </main>
+
+    <!-- Sección Estudiantes -->
+<section id="estudiantes">
+    <h2>Estudiantes</h2>
+    <p>Información sobre inscripciones, horarios y cursos.</p>
+    <!-- Enlace a más información externa -->
+    <a href="https://www.udenar.edu.co/estudiante/" target="_blank">Más información sobre inscripciones</a>
+</section>
+
+<!-- Sección Docentes -->
+<section id="docentes">
+    <h2>Docentes</h2>
+    <p>Datos sobre asignaturas, horarios y noticias académicas.</p>
+    <a href="https://www.udenar.edu.co/docentes/" target="_blank">Más información sobre gestión docente</a>
+    <div>
+        <h3>Gestión de Docentes</h3>
+        <!-- Formulario para ingresar datos de docentes -->
+        <form>
+            <label for="nombre-docente">Nombre del Docente:</label>
+            <input type="text" id="nombre-docente" name="nombredocente" placeholder="Ingrese el nombre"><br><br>
+
+            <label for="materia-docente">Materia:</label>
+            <input type="text" id="materia-docente" name="materia-docente" placeholder="Ingrese la materia"><br><br>
+
+            <button type="button">Agregar Docente</button>
+            <button type="button">Actualizar Docente</button>
+            <button type="button">Eliminar Docente</button>
+        </form>
+    </div>
+</section>
+
 </body>
 </html>
