entrega pagina finalizada

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
         </form>
     </div>
 </section>
+<!-- Sección Video -->
+<section id="video">
+    <h2>Conoce Nuestra Universidad</h2>
+    <p>Descubre más sobre la Universidad de Nariño en el siguiente video:</p>
+    <!-- Incrustar video de YouTube -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8gPP5SvC-98?si=aWoPfOv9_5N-KH5L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</section>
 
+<!-- Pie de Página -->
+<footer>
+    <p>&copy; 2025 Universidad de Nariño - Todos los derechos reservados</p>
+</footer>
 </body>
 </html>
